# THE-GRID-PLATFORM-SYSTEM

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.scheduler  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  docker-compose.yml
api/: README.md  go.mod  main.go
core/cost-engine/: Cargo.toml
core/cost-engine/src/: lib.rs
core/optimizer/: Cargo.toml
core/optimizer/src/: lib.rs
core/scheduler/: Cargo.toml  build.rs
core/scheduler/src/: grpc.rs  lib.rs
core/scheduler/tests/: scheduler_tests.rs
docs/: DEPLOYMENT.md  WHITEPAPER.md
docs/blog/: 01-why-your-cloud-bill-is-lying.md
proto/: scheduler.proto
scripts/: deploy-vps.sh  deploy-worker.sh  remove-emojis.sh
test-client/: Cargo.toml  build.rs
test-client/src/: main.rs
tests/: pre-release-test.sh  test-docker-execution.sh
worker/: Cargo.toml  build.rs
worker/src/: executor.rs  main.rs
worker/tests/: test_executor.rs
