[package]
name = "tgp-worker"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
hostname = "0.3"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "tgp-worker"
path = "src/main.rs"
