[package]
name = "tgp-scheduler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Local workspace dependencies
tgp-cost-engine = { path = "../cost-engine" }
tgp-optimizer = { path = "../optimizer" }

[[bin]]
name = "tgp-scheduler"
path = "src/bin/tgp-scheduler.rs"

[dev-dependencies]
criterion.workspace = true
tokio-test = "0.4"
